--- a/src/style.css
+++ b/src/style.css
@@ -13,8 +13,14 @@
 .balance-left-h1-block,
 .balance-left-h2-block,
 .balance-left-p-block {
-  max-width: 2000px;
-  padding: 20px;
+  margin: auto;
+  max-width: 1200px;
+  padding: 20px 0 20px 20px;
+}
+.balance-left-h1-block > h1,
+.balance-left-h2-block > h2,
+.balance-left-p-block > p {
+  padding-right: var(--right-space, 50%);
 }
 
 /* full-span-image */
@@ -26,6 +32,11 @@
 }
 
 @media (max-width: 767px) {
+  .balance-left-h1-block > h1,
+  .balance-left-h2-block > h2,
+  .balance-left-p-block > p {
+    padding-right: 20px;
+  }
   .full-span-image {
     height: var(--mobile-height);
   }
